--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -33,6 +33,9 @@ input {
 .strong {
     font-weight: 600;
 }
+.center {
+    text-align: center;
+}
 .wrapper {
     position: relative;
     max-width: 1210px;
@@ -115,6 +118,11 @@ input {
 .preview {
     font-weight: 600;
     line-height: 1.5;
+}
+.preview_center {
+    max-width: 610px;
+    margin: 0 auto 64px;
+    text-align: center;
 }
 .header {
     position: absolute;
@@ -244,11 +252,6 @@ input {
 }
 .review__section {
     padding: 70px 0 100px;
-    text-align: center;
-}
-.review__section .preview {
-    max-width: 610px;
-    margin: 0 auto 64px;
 }
 .review__slider {
     margin: 0 -15px 100px;
@@ -276,4 +279,42 @@ input {
 .review__author {
     font-weight: 600;
     line-height: 1.5;
+}
+.advantages__section {
+    padding: 70px 0 112px;
+}
+.advantages__item {
+    width: 33.333%;
+    padding: 40px 24px 32px;
+    text-align: center;
+}
+.advantages__item:hover {
+    background: #FFFFFF;
+    box-shadow: 16px 16px 48px rgba(0, 0, 0, 0.0994678);
+    border-radius: 3px;
+}
+.advantages__item:hover .advantages__title:before {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 8px;
+    z-index: -1;
+    background: #C86DD7;
+}
+.advantages__title {
+    position: relative;
+    width: fit-content;
+    margin: 15px auto 9px;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.33;
+    z-index: 0;
+}
+.advantages__desc {
+    font-weight: 400;
+    line-height: 1.5;
+    color: #33333355;
 }
