--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -18,6 +18,11 @@ h1, h2 {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
 }
+h1 {
+    font-size: 72px;
+    line-height: 1;
+    margin-bottom: 26px;
+}
 h2 {
     font-size: 56px;
     line-height: 1.14;
@@ -48,6 +53,9 @@ input {
 }
 .flex-justify_sb {
     justify-content: space-between;
+}
+.flex-justify_end {
+    justify-content: flex-end;
 }
 .flex-align_center {
     align-items: center;
@@ -86,8 +94,8 @@ input {
     text-align: center;
     font-weight: 700;
 }
-.image__wrap {
-
+.btn_border {
+    border: 1px solid #ffffff33;
 }
 .image__wrap_rect {
     position: relative;
@@ -135,6 +143,15 @@ input {
     width: 100%;
     padding: 30px 0;
     z-index: 2;
+}
+.logo__wrap {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #fff;
+}
+.header__link {
+    color: #fff;
 }
 .main-screen__wrap {
     position: relative;
@@ -336,4 +353,11 @@ input {
 }
 .team__desc .preview {
     margin-bottom: 32px;
+}
+.main-screen__wrap {
+    height: 100vh;
+    padding: 0 0 48px;
+}
+.main-screen__wrap .preview {
+    margin-bottom: 34px;
 }
